--- a/style/main.scss
+++ b/style/main.scss
@@ -1,4 +1,4 @@
-@use '../node_modules/@linwooddev/style/scss/main.scss';
-@forward 'window';
-@forward 'layout';
-@forward 'typo';
+@use "../node_modules/@linwooddev/style/scss/main.scss";
+@forward "window";
+@forward "layout";
+@forward "typo";
