Add details view

--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -28,4 +28,18 @@
   .min-w-#{$breakpoint} {
     min-width: $value;
   }
+  .min-h-#{$breakpoint} {
+    min-height: $value;
+  }
+  .max-h-#{$breakpoint} {
+    max-height: $value;
+  }
+}
+
+.overflow-y {
+  overflow-y: auto;
+}
+
+.overflow-x {
+  overflow-x: auto;
 }
