--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -1,4 +1,5 @@
-@use '../node_modules/@linwooddev/style/scss/main.scss';
+@use "../node_modules/@linwooddev/style/scss/main.scss";
+@use "sass:map";
 
 .sidebar-layout {
   display: flex;
@@ -6,7 +7,7 @@
   gap: 4px;
   flex-direction: column;
 }
-@container (min-width: 600px) {
+@container (min-width: #{map.get(main.$breakpoints,'xs')}) {
   .sidebar-layout {
     flex-direction: row;
   }
@@ -19,8 +20,10 @@
   }
 }
 @each $breakpoint, $value in main.$breakpoints {
-  .show-#{$breakpoint} {
-    display: $value;
+  @container (min-width: #{$value}) {
+    .hide-#{$breakpoint} {
+      display: none;
+    }
   }
 }
 
