--- a/style/_typo.scss
+++ b/style/_typo.scss
@@ -27,12 +27,21 @@
 select, textarea {
   border: 0;
   padding: 8px;
+  padding-right: 24px;
   margin: 4px 0;
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='white'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat;
+  background-position: calc(100% - 8px) calc(50% + 3px);
+  background-size: 12px;
   border-radius: vars.$border-radius;
   backdrop-filter: vars.$elevation-filter;
   background-color: colors.$elevation;
   color: colors.$background-text;
+  background-repeat: no-repeat;
   font-size: 1em;
+  appearance: none;
+  &:focus {
+    outline: 2px solid colors.$primary;
+  }
 }
 
 .resize-vertical {
@@ -43,6 +52,20 @@ option {
   border: 0;
   padding: 8px;
   margin: 4px 0;
+  background-color: colors.$background;
+  color: colors.$background-text;
+}
+
+button, .btn {
+  &:disabled {
+    cursor: not-allowed;
+    background-color: colors.$background;
+    color: colors.$background-text;
+  }
+}
+
+input:read-only {
+  cursor: not-allowed;
   background-color: colors.$background;
   color: colors.$background-text;
 }
