--- a/style/main.scss
+++ b/style/main.scss
@@ -1,4 +1,5 @@
 @use "../node_modules/@linwooddev/style/scss/main.scss";
 @forward "window";
+@forward "input";
 @forward "layout";
 @forward "typo";
