--- a/style/_dialog.scss
+++ b/style/_dialog.scss
@@ -2,20 +2,21 @@
 @use "../node_modules/@linwooddev/style/scss/colors";
 
 .dialog {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  flex-direction: column;
   &::backdrop {
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: main.$elevation-filter;
+  }
+  &[open] {
+    display: flex;
   }
   border: 0;
   border-radius: main.$border-radius;
   background: colors.$background;
   color: colors.$background-text;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 100%;
+  align-items: stretch;
   padding: 1rem;
   &-title {
     display: flex;
@@ -23,5 +24,12 @@
     font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 1rem;
+  }
+  &-content {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    max-height: 100%;
+    overflow-y: auto;
   }
 }
