Add icon webfont

--- a/style/_typo.scss
+++ b/style/_typo.scss
@@ -2,4 +2,13 @@
   width: 2rem;
   height: 2rem;
   display: block;
+  font-weight: 2rem;
+}
+
+.text-icon {
+  font-size: 1.5rem;
+}
+
+.big-text-icon {
+  font-size: 2rem;
 }
