Add action view

--- a/style/_dialog.scss
+++ b/style/_dialog.scss
@@ -33,3 +33,19 @@
     overflow-y: auto;
   }
 }
+
+.fullscreen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: colors.$background;
+}
+
+.view {
+  cursor: grab;
+  &:active {
+    cursor: grabbing;
+  }
+}
