--- a/style/_input.scss
+++ b/style/_input.scss
@@ -1,3 +1,6 @@
+@use "../node_modules/@linwooddev/style/scss/main.scss";
+@use "sass:map";
+
 input {
   font-family: inherit;
 }
@@ -6,4 +9,8 @@ button, .btn {
   font-family: inherit;
   cursor: pointer;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: map-get(main.$spacing, 'xs');
 }
