Start implementing actions graph editor

--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -17,3 +17,11 @@
 .no-overflow {
   overflow: hidden;
 }
+
+.absolute-full {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
